adding sidebar links

--- a/_config.yml
+++ b/_config.yml
@@ -49,9 +49,10 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.ht
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
-# blog_index_asides:
+# NOTE: Am adding the custom links to the asides/recent_posts.html for now as Octopress doesn't seem to pick up my deafult custom/asides/home.html template
+# blog_index_asides: [custom/asides/home.html, asides/recent_posts.html, asides/twitter.html]
 # post_asides:
-page_asides: about
+# page_asides:
 
 # ----------------------- #
 #   3rd Party Settings    #
