--- a/_config.yml
+++ b/_config.yml
@@ -59,8 +59,8 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.ht
 # ----------------------- #
 
 # Github repositories
-github_user:
-github_repo_count: 0
+github_user: foodfight
+github_repo_count: 2
 github_show_profile_link: true
 github_skip_forks: true
 
