Update Nathen's bio and pic.
List Nathen before Matt Ray

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 url: http://foodfight.github.com
 title: Food Fight
 subtitle: The Podcast where DevOps chefs do battle
-author: Bryan Berry - Matt Ray - Nathen Harvey
+author: Bryan Berry - Nathen Harvey - Matt Ray
 simple_search: http://google.com/search
 description: The Podcast where DevOps chefs do battle
 
