Update the URL in the config
this fixes the broken search box on the site

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://foodfight.github.com
+url: http://foodfightshow.org/
 title: Food Fight
 subtitle: The Podcast where DevOps chefs do battle
 author: Bryan Berry - Nathen Harvey - Matt Ray
